# any2pdf

./: .gitignore  README.md  pyproject.toml  requirements.txt  run-desktop.command  run-web.command
any2pdf/: __init__.py  cli.py  core.py  engines.py  fontmap.conf
desktop/: app.py
server/: app.py
server/static/: app.js  index.html  style.css
tests/samples/: sample.csv  sample.docx  sample.html  sample.md  sample.txt  sample.xlsx
